# ssh-vault

./: .gitignore  .justfile  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gopkg.toml  LICENSE  Makefile  README.md  SECURITY.md  a_test.go  aes.go  cache.go  cache_test.go  close.go  create.go  create_test.go  deny.toml  edit.go  fingerprint_test.go  flags.go  get_password.go  get_password_darwin.go  get_password_darwin_test.go  get_password_prompt.go  getkey.go  getkey_test.go  go.mod  go.sum  parser.go  shred.go  shred_test.go  sopas  vault  vault.go  vault_test.go  view.go
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  codeql-analysis.yml  coverage.yml  deploy.yml  homebrew.yml  packagecloud.yml  security-audit.yml  test.yml
cmd/ssh-vault/: main.go
go/: Dockerfile  cache.go  cache_test.go  create_test.go  encode.go  fingerprint_test.go  get_password_darwin.go.off  get_password_darwin_test.go.off  get_password_prompt.go  go.mod  shred.go  vault.go  vault_test.go
go/cmd/ssh-vault/: main.go
src/: cache.rs  config.rs  lib.rs  new  tools.rs
src/cli/: -u  dispatcher.rs  mod.rs  start.rs
src/cli/actions/: create.rs  edit.rs  fingerprint.rs  mod.rs  view.rs
src/cli/commands/: create.rs  edit.rs  fingerprint.rs  mod.rs  view.rs
src/vault/: dio.rs  find.rs  fingerprint.rs  mod.rs  online.rs  parse.rs  remote.rs
src/vault/crypto/: aes256.rs  chacha20poly1305.rs  mod.rs
src/vault/ssh/: ed25519.rs  mod.rs  rsa.rs
test_data/: ed25519  ed25519.pub  ed25519_password  ed25519_password.pub  id_rsa  id_rsa.pub  id_rsa.pub_extra_linebreak  id_rsa_extra_linebreak  id_rsa_password  id_rsa_password.pub  vaultpw.sh
