[package]
name = "ssh-vault"
version = "1.0.3"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "encrypt/decrypt using ssh keys"
documentation = "https://ssh-vault.com/"
repository = "https://github.com/ssh-vault/ssh-vault"
homepage = "https://ssh-vault.com/"
readme = "README.md"
keywords = ["ssh", "encryption", "fingerprint"]
categories = ["command-line-utilities", "cryptography"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1"
atty = "0.2.14"
base58 = "0.2.0"
base64ct = { version = "1.6.0", features = ["alloc"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.4", features = ["env"] }
ed25519-dalek = { version = "2.0.0", features = ["pkcs8"] }
file_shred = "1.1.3"
hex-literal = "0.4.1"
hkdf = "0.12.3"
home = "0.5.5"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking"] }
rpassword = "7.3"
rsa = { version = "0.9.3", features = ["sha2"] }
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
ssh-key = { version = "0.6.2", features = ["ed25519", "rsa", "encryption"] }
tempfile = "3.8.0"
url = "2.4.1"
x25519-dalek = { version = "2.0.0", features = ["getrandom", "static_secrets"] }
