[package]
name = "ssh-vault"
version = "1.1.5"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "encrypt/decrypt using ssh keys"
documentation = "https://ssh-vault.com/"
repository = "https://github.com/ssh-vault/ssh-vault"
homepage = "https://ssh-vault.com/"
readme = "README.md"
keywords = ["ssh", "encryption", "fingerprint"]
categories = ["command-line-utilities", "cryptography"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1"
base58 = "0.2.0"
base64ct = { version = "1.7.3", features = ["alloc"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.5", features = ["env", "color"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
hex-literal = "1.1.0"
hkdf = "0.12.4"
home = "0.5.12"
md5 = "0.8.0"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
rpassword = "7.3"
rsa = { version = "0.9.9", features = ["sha2"] }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
shell-words = "1.1.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "encryption"] }
temp-env = "0.3.6"
tempfile = "3.19"
url = "2.5"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
zeroize = "1.8.1"
